Changes made from the "0.7.0" release to the "0.8.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:

- Now uses SQLite3 to manage Unicode names and code points.
- Optimized calls to glNormal3f(). It is now called once per string rather than
  once per character (except for extrusion).
- Refactored code of object __GLCmaster.
- Maximum character metrics obtained from glcGetMaxCharMetric() are now cached.
- Code refactoring between glcGetMaxCharMetric() and the other measurement
  commands in order to maximize common code for easier maintenance.
- Fixed glcGetFontMap() and glcGetMasterMap() so that their return is not null
  when a character is mapped in the font/master but its Unicode name is not
  stored in QuesoGLC database.
- Character codes out of range are now rejected when GLC_UCS1 or GLC_UCS2 are
  enabled. GLC_PARAMETER_ERROR is then raised.
- Fixed a bug that crashed QuesoGLC when trying to call glcGetFontMap() with a
  character not mapped in the font.
- Fixed a bug which caused the measurement caches not to be updated when
  GLC_RESOLUTION was changed by the users.
- Fixed a memory leak in the management of the texture atlas: when a font was
  deleted, the memory allocated to this font in the atlas was definitely lost
  instead of being given back to the texture allocator.
- Fixed a bug which did not include trailing spaces in the calculation of
  bounding boxes.
- Fixed a bug which caused artifacts when rendering glyphes that extend beyond
  the EM square.
- Fixed a bug which prevented letters l and i to be displayed at small scales
  when GLC_HINTING_QSO and GLC_TEXTURE were enabled.
- Side effect of the above bug fix : the antialiasing is improved for most
  characters since they are no longer located against the edges of the texture.
- Fixed a bug in glcGenFontID() which could return the ID of an existing font.
- Fixed a race condition in glcGenContext()